plugins {
  id 'application'
  id 'java-library'
}

repositories {
    mavenCentral()
}

dependencies {

    // Use JUnit test framework
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

test {
	useJUnitPlatform ()
	testLogging {
		events 'passed', 'skipped', 'failed'
	}
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(14)
    }
}

mainClassName = 'tab2mxl.Main'
